Fix episode titles getting cut off at the bottom. http://puu.sh/8SyBe.jpg

--- a/src/app/styl/show_detail.styl
+++ b/src/app/styl/show_detail.styl
@@ -362,6 +362,7 @@
 		display inline-block
 		font-size 23px
 		line-height 1
+		padding-bottom 3px
 		max-width 75%
 		overflow hidden
 		white-space nowrap
